//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message News {
	bytes              Index                =1;  //数据库中的index
	bytes              Title                =2;  //标题
	bytes              Content              =3;  //内容
	int64              CreateTime           =4;  //创建时间
	int64              UpdateTime           =5;  //修改时间
	bytes              Class                =6;  //类别
}

