//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package protobuf;

option go_package = "./go_protobuf";

message VnodeinfoV2 {
	bytes    Nid      = 1 ;   //节点真实网络地址
	uint64   Index    = 2 ;   //节点第几个空间，从1开始,下标为0的节点为实际节点。
	bytes    Vid      = 3 ;   //vid，虚拟节点网络地址
}

message AddrV2{
	bytes     Nid      = 1;    //节点真实网络地址 
}

message VnodeinfoSV2 {
	bytes    Nid      = 1 ;   //节点真实网络地址
	uint64   Index    = 2 ;   //节点第几个空间，从1开始,下标为0的节点为实际节点。
	bytes    Vid      = 3 ;   //vid，虚拟节点网络地址
	string   Addr     = 4 ;   //真实节点IP地址
	uint64   TcpPort  = 5 ;   //真实节点tcp端口
	uint64   QuicPort = 6 ;   //真实节点quic端口
}

message FindVnodeVOV2 {
	VnodeinfoV2    Self      = 1 ;   //自己节点
	VnodeinfoV2    Target    = 2 ;   //目标节点
}


message VnodeinfoRepeatedV2 {
	repeated    VnodeinfoV2    vnodes      = 1 ;   //
}

message VnodeinfoSRepeatedV2 {
	repeated    VnodeinfoSV2    vnodes      = 1 ;   //
}

message NodeAddrRepeatedV2{
	repeated    AddrV2          nodes       = 1;
}